--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/device": "^1.2.3",
+    "es-abstract": "^1.14.1",
     "nuxt": "^2.0.0",
     "nuxt-buefy": "^0.3.2"
   },
